--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,53 +11,44 @@ body {
   position: relative;
 }
 
-.header {
-  background-color: #199900;
-  margin-bottom: 1.45rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 80px;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 100vw;
-}
-
-.search-btn:focus,
-.search-input:focus {
-  outline: none;
-}
-
-.search-btn {
-  background-color: rgb(5, 179, 19) !important;
-  position: relative;
-  z-index: 0;
-}
-
-.search-btn::before {
-  content: "";
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.search-btn:hover::before {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
 .card {
   padding: 20px;
-  border-radius: 3px !important;
+  border-radius: 6px;
+}
+
+.wrapper {
+  position: relative;
+}
+
+.info-card,
+.fa-github,
+.loading {
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .info-card {
-  background-color: rgb(67, 85, 85);
-  color: rgb(247, 252, 241);
+  position: absolute;
+  z-index: 2000;
+  width: 200px;
+  top: 80px;
+  left: 20px;
+  text-align: left !important;
+  background-color: rgb(247, 255, 249);
+  color: rgba(63, 63, 63, 0.877);
   text-transform: capitalize;
-  display: grid;
-  justify-content: center;
+  box-shadow: 4px 5px 8px rgba(0, 0, 0, 0.2);
+}
+
+.info-card img {
+  margin: 0 auto;
+}
+
+.info-card:hover {
+  transform: scale(1.15);
+}
+
+.info-card .city {
+  font-size: 1.7em;
   text-align: center;
 }
 
@@ -65,81 +56,34 @@ body {
   margin: 5px 0;
 }
 
-h1,
-h2,
-p {
-  text-align: center;
-}
 .leaflet-container {
-  height: 400px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.map-marker {
-  background-color: #199900 !important;
-}
-
-.loading {
-  min-width: 100vw;
-  min-height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-  color: white;
-}
-
-.loading > * {
   position: absolute;
-  margin-left: -180px;
-  margin-top: -20px;
-  top: 50%;
-  left: 50%;
-}
-
-.loading-child {
-  margin-bottom: -7px;
-  animation: up-and-down 4s infinite linear;
-}
-
-.active {
-  display: block !important;
-}
-
-.unmounting {
-  animation: unmount 150ms linear;
-}
-
-.disabled {
-  display: none !important;
+  height: calc(100vh - 100px);
+  width: 100%;
 }
 
 @media (max-width: 730px) {
-  .header {
-    grid-template-columns: 1fr;
-    grid-template-rows: 60px 100px;
-    max-width: 100vw !important;
+  .info-card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 200px));
+    width: 100%;
+    font-size: 0.8rem;
+    top: 0;
+    left: 0;
+    max-height: 20vh;
   }
 
-  .search-input {
-    padding: 10px !important;
+  /* User can proc the hover effect by holding down the element for a second or so*/
+  .info-card:hover {
+    transform: scale(0.95);
   }
-}
 
-@media (max-width: 400px) {
-  .search-input {
-    padding: 5px !important;
+  .city {
+    font-size: 1.5rem;
   }
-}
 
-@keyframes unmount {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
+  .info-card img {
+    max-width: 40px;
   }
 }
 
